--- a/package.json
+++ b/package.json
@@ -9,18 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@progress/kendo-data-query": "^1.7.0",
+    "@progress/kendo-drawing": "^1.20.3",
+    "@progress/kendo-licensing": "^1.3.5",
+    "@progress/kendo-react-animation": "^8.2.0",
+    "@progress/kendo-react-buttons": "^8.2.0",
+    "@progress/kendo-react-data-tools": "^8.2.0",
+    "@progress/kendo-react-dateinputs": "^8.2.0",
+    "@progress/kendo-react-dropdowns": "^8.2.0",
+    "@progress/kendo-react-excel-export": "^8.2.0",
+    "@progress/kendo-react-grid": "^8.2.0",
+    "@progress/kendo-react-inputs": "^8.2.0",
+    "@progress/kendo-react-intl": "^8.2.0",
+    "@progress/kendo-react-pdf": "^8.2.0",
+    "@progress/kendo-react-popup": "^8.2.0",
+    "@progress/kendo-react-treeview": "^8.2.0",
+    "@progress/kendo-svg-icons": "^3.0.0",
+    "@progress/kendo-theme-core": "^9.0.0",
+    "@progress/kendo-theme-default": "^9.0.0",
+    "next": "14.2.10",
+    "pdf-lib": "^1.17.1",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.10"
+    "sass": "^1.78.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.10",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.10"
+    "typescript": "^5"
   }
 }
